<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FAItango</string>
    <string name="mainTextViewText">Events:</string>
    <string name="mainSpinnerPrompt">View events of &#8230;</string>
    <string name="mainMenuSearch">Search</string>
    <string name="mainMenuSync">Synchronize</string>
    <string name="mainMenuSetting">Settings</string>
    <string name="mainMenuReset">Reset Data</string>
    <string name="mainMenuAll">All Events</string>
    <string name="eventsTitle">Events List</string>
    <!-- Search -->
    <string name="searchTextViewText">Filter Events by</string>
    <string name="searchCountrySpinnerTextViewText">Country:</string>
    <string name="searchCountrySpinnerText">Select a country</string>
    <string name="searchRegionSpinnerTextViewText">Region:</string>
    <string name="searchRegionSpinnerText">Select a region</string>
    <string name="searchProvinceSpinnerTextViewText">Province:</string>
    <string name="searchProvinceSpinnerText">Select a province</string>
    <string name="searchFromDateTextViewText">From date:</string>
    <string name="searchToDateTextViewText">To date:</string>
    <string name="searchTypeTextViewText">Types:</string>
    <string name="searchButtonText">Search!</string>
    <!-- Preferences -->
    <string name="settingConnectionCategory">Connection</string>
    <string name="settingTitleRemoteServer">Server</string>
    <string name="settingSummaryRemoteServer">Set remote event server</string>
    <string name="settingDefaultRemoteServer">newagenda.faitango.it</string>
    <string name="settingDialogTitleRemoteServer">Set remote server</string>
    <string name="settingSyncCategory">Synchronization</string>
    <string name="settingSyncTypeTitle">Synchronization Type</string>
    <string name="settingSyncTypeSummary">Set a synchronization policy</string>
    <string name="settingSyncTypeDialogTitle">Choose a synchronization policy</string>
	<string name="settingSyncPeriodTitle">Synchronization Period</string>
	<string name="settingSyncPeriodSummary">Set the synchronization period</string>
	<string name="settingSyncPeriodDialogTitle">Choose a synchronization period</string>
    <string name="settingSearchCategory">Synchronization Parameters</string>
    <string name="settingCountryTitle">Country</string>
    <string name="settingCountrySummary">The default country used to filter events.</string>
    <string name="settingCountryDialogTitle">Choose a country</string>    
    <string name="settingRegionTitle">Region</string>
    <string name="settingRegionSummary">The default region used to filter events.</string>
    <string name="settingRegionDialogTitle">Choose a region</string>
    <string name="settingProvinceTitle">Province</string>
    <string name="settingProvinceDialogTitle">Choose a province</string>
    <string name="settingProvinceSummary">The default province used to filter events.</string>
    <string name="settingEventsTypeListTitle">Type of events</string>
    <string name="settingEventsTypeListSummary">Choose what are the kind of events to search</string> 
    <string name="settingEventSearchPeriodTitle">Events Time Interval</string>
	<string name="settingEventSearchPeriodSummary">Set the time interval of events for searches.</string>
	<string name="settingEventSearchPeriodDialogTitle">Choose a time interval</string>
    <!-- Event Type Strings -->
    <string name="eventTypeCONCERT">Concerto</string>
    <string name="eventTypePARTY">Festa</string>
    <string name="eventTypeFESTIVAL">Festival</string>
    <string name="eventTypeMARATHON">Maratona</string>
    <string name="eventTypeMILONGA">Milonga</string>
    <string name="eventTypeSHOW">Spettacolo</string>
    <string name="eventTypeSTAGE">Stage</string>
    <string name="eventTypeVACATION">Vacanza/Viaggio</string>
    <!-- Event Type Strings -->
    <string name="httpUriPathEventList">/eventi/eventilistaJSON.asp</string>
    <string name="httpUriPathEventDetail">/eventi/eventidettJSON.asp</string>
    <string name="calButton">Add remainder</string>
    <string name="shareButton">Share this</string>
    <string name="shareJoin">Join me at this %s</string>
    <string name="shareWhat">I will go to dance in %1$s on %2$s. \nMore info at %3$s.</string>   
</resources>