<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/main_menu_all"
          android:icon="@drawable/ic_menu_all"
          android:title="@string/mainMenuAll"/>
    <item android:id="@+id/main_menu_search"
          android:icon="@drawable/ic_menu_search"
          android:title="@string/mainMenuSearch"/>
    <item android:id="@+id/main_menu_sync"
          android:icon="@drawable/ic_menu_sync"
          android:title="@string/mainMenuSync"/>
    <item android:id="@+id/main_menu_setting"
          android:icon="@drawable/ic_menu_preferences"
          android:title="@string/mainMenuSetting"/>
    <item android:id="@+id/main_menu_reset"
          android:icon="@drawable/ic_menu_reset"
          android:title="@string/mainMenuReset"/>
</menu>